--- a/dbsync/pom.xml
+++ b/dbsync/pom.xml
@@ -12,6 +12,10 @@
 
     <artifactId>canal.parse.dbsync</artifactId>
 
+    <properties>
+        <debezium.version>1.5.4.Final</debezium.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alibaba.otter</groupId>
@@ -21,8 +25,13 @@
         <dependency>
             <groupId>com.eshore.otter</groupId>
             <artifactId>canal.parse.driver</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-core</artifactId>
+            <version>${debezium.version}</version>
         </dependency>
     </dependencies>
 </project>
